# file-reorder-encoder

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
src/rng/: mod.rs  msws.rs  pcg.rs  xorshift.rs
